fix missing background when deployed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,7 +62,7 @@ a {
 }
 
 .app__bg {
-  background: url("../assets/bg.png");
+  background: url("/images/bg.png");
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
